--- a/src/components/unsplash/Unsplash.module.scss
+++ b/src/components/unsplash/Unsplash.module.scss
@@ -9,7 +9,7 @@
 @media only screen and (max-width: 768px) {
   .main {
     width: 100%;
-    height: 50%;
+    height: 370px;
     overflow: hidden;
     flex-shrink: 0;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.22);
